objects/PMC_DH_Store_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>PMC_DH_Batch_Size__c</fullName>
        <description>Batch Size to process Product Enablement and Restriction</description>
        <label>Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Country__c</fullName>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_DH_DefaultUOMForCountry__c</fullName>
        <label>Default UOM For Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Default_Image_Url__c</fullName>
        <label>Default Image Url</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Description__c</fullName>
        <description>Purpose of the store configuration</description>
        <inlineHelpText>Store Configuration Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_FieldsAPIName__c</fullName>
        <label>Field API Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_DH_PageUrl__c</fullName>
        <label>PageUrl</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Prepended_Image_Url__c</fullName>
        <label>Prepended Image Url</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Product_Max_Result__c</fullName>
        <label>Product Max Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_QuoteInactiveExtendedDays__c</fullName>
        <label>Quote Inactive Extended Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_QuoteInactiveExtendedHours__c</fullName>
        <label>Quote Inactive Extended Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>PMC DH Store Configuration</label>
    <listViews>
        <fullName>PMC_DH_Store_Configurations</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>PMC_DH_Description__c</columns>
        <columns>PMC_DH_isActive__c</columns>
        <columns>PMC_DH_Product_Max_Result__c</columns>
        <columns>PMC_DH_Batch_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>PMC DH Store Configurations</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>PMC DH Store Configurations</pluralLabel>
</CustomObject>